--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "boilerplate",
-  "version": "1.0.0",
-  "description": "Boilerplate for twig+js+less apps",
+  "name": "Boilerplate",
+  "version": "1.0.1",
+  "description": "Шаблон проекта для быстрого старта",
   "repository": {
     "type": "git",
-    "url": "https://github.com/theexplay/"
+    "url": "https://github.com/theexplay/Boilerplate"
   },
   "dependencies": {
     "gulp": "^3.9.0",
     "gulp-jade": "^1.1.0",
     "gulp-autoprefixer": "^3.0.1",
     "gulp-imagemin": "^2.4.0",
+    "imagemin-pngquant": "^4.2.0",
+    "gulp.spritesmith":"^6.2.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-stylus": "^2.1.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.4.0",
     "gulp-watch": "^4.3.5",
     "gulp-rigger": "^0.5.8",
-    "imagemin-pngquant": "^4.2.0",
     "browser-sync": "^2.9.1",
     "gulp-changed": "*",
     "del": "^2.0.1"
