--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "gulp-watch": "^4.3.5",
     "gulp-cached": "^1.1.0",
     "gulp-rigger":"*",
-    "gulp-consolidate":"*"
+    "gulp-consolidate":"*",
+    "swig":"*"
   },
   "devDependencies": {
     "gulp-iconfont": "^6.0.0"
